tests/ui/const-generics/mgca/wrapped_array_elem_type_mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/wrapped_array_elem_type_mismatch.rs:7:34
   |
LL |     let _: ArrWrap<{ [1_u8] }> = ArrWrap::<{ [1_u16] }>;
   |            -------------------   ^^^^^^^^^^^^^^^^^^^^^^ expected `*b"\x01"`, found `[1]`
   |            |
   |            expected due to this
   |
   = note: expected struct `ArrWrap<*b"\x01">`
              found struct `ArrWrap<[1]>`

error: the constant `1` is not of type `u8`
  --> $DIR/wrapped_array_elem_type_mismatch.rs:7:46
   |
LL |     let _: ArrWrap<{ [1_u8] }> = ArrWrap::<{ [1_u16] }>;
   |                                              ^^^^^^^ expected `u8`, found `u16`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
